src/objects/TRAK_Environment_Release__c.object
<CustomObject>
    <description>Business Description: This object is used to link a release to an environment. This can be used to track what releases have been put in to what environment and when they were put there.

Used In: Release Tracker App</description>
    <fields>
        <fullName>Actual_Finish__c</fullName>
        <label>Actual Finish</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Start__c</fullName>
        <inlineHelpText>The date the linked release was pushed to the linked environment</inlineHelpText>
        <label>Actual Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Back_out_plan__c</fullName>
        <inlineHelpText>How would this depoyment be reversed if it failed or was found to be problematic</inlineHelpText>
        <label>Back out plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has this release been completed to this environment?</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployment_Impact__c</fullName>
        <inlineHelpText>What will the impact of this deployment be on the availability of the environments, and the users who are currently using them.</inlineHelpText>
        <label>Deployment Impact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment</label>
        <referenceTo>TRAK_Environment__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Environment_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Impacted_Markets__c</fullName>
        <label>Impacted Markets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_Finish__c</fullName>
        <inlineHelpText>The planned finish time of the release</inlineHelpText>
        <label>Planned Finish</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Planned_Start__c</fullName>
        <inlineHelpText>The Planned Start and Finish time of this release</inlineHelpText>
        <label>Planned Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Release_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person responsible for executing the release</inlineHelpText>
        <label>Release Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Environment_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <referenceTo>TRAK_Release__c</referenceTo>
        <relationshipLabel>Environment Releases</relationshipLabel>
        <relationshipName>TRAK_Environment_Releases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person reviewing the release process</inlineHelpText>
        <label>Release Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Environment_Releases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Environment Release</label>
    <nameField>
        <displayFormat>ER-/{000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Environment Releases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Enter_Finish_Date_Before_Complete</fullName>
        <active>true</active>
        <description>Finish Date to be entered before checking the &apos;Complete&apos; box.</description>
        <errorConditionFormula>AND( ISBLANK(Actual_Finish__c),  Complete__c = True)</errorConditionFormula>
        <errorDisplayField>Actual_Finish__c</errorDisplayField>
        <errorMessage>Please enter Actual Finish Date before checking &apos;Complete&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Release_Owner_and_Reviewer_Diff</fullName>
        <active>true</active>
        <description>The release owner and reviewer should be different.</description>
        <errorConditionFormula>AND((Release_Owner__c =  Reviewer__c), (Release_Owner__c &lt;&gt; null), (Reviewer__c &lt;&gt; null))</errorConditionFormula>
        <errorMessage>Release Owner and Reviewer can&apos;t be the same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Start_and_End_Date_Actual</fullName>
        <active>true</active>
        <description>Start Date should not be later than End Date</description>
        <errorConditionFormula>Actual_Start__c &gt;  Actual_Finish__c</errorConditionFormula>
        <errorMessage>Start Date cannot be after Finish Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Start_and_End_Date_Planned</fullName>
        <active>true</active>
        <errorConditionFormula>DATEVALUE(Planned_Start__c)  &gt;   DATEVALUE(Planned_Finish__c)</errorConditionFormula>
        <errorMessage>Planned Start cannot be after planned finish</errorMessage>
    </validationRules>
</CustomObject>